manifests/media-entertainment/base/bazarr.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: bazarr
          image: "lscr.io/linuxserver/bazarr:latest"
          imagePullPolicy: Always
          resources: {}
          ports:
            - name: http
              containerPort: 6767
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 6767
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: media
              mountPath: /data/media
            - name: bazarr-config
              mountPath: /config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-media
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: pvc-iscsi-bazarr-config

---
kind: Service
apiVersion: v1
metadata:
  name: bazarr
  namespace: media
  labels:
    app: bazarr
spec:
  selector:
    app: bazarr
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 6767
      targetPort: http

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  labels:
    gateway: private
spec:
  hostnames:
    - bazarr.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: bazarr
          port: 6767
