manifests/media-entertainment/base/jellyfin.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
      containers:
        - name: jellyfin
          image: "docker.io/jellyfin/jellyfin:10"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
            - name: https
              containerPort: 8920
              protocol: TCP
            - name: svc-discovery
              containerPort: 1900
              protocol: UDP
            - name: cl-discovery
              containerPort: 7359
              protocol: UDP
          volumeMounts:
            - name: media
              mountPath: /media
            - name: music
              mountPath: /music/organized
              subPath: organized
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /cache
          resources: {}
      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: pvc-nfs-jellyfin-media
        - name: music
          persistentVolumeClaim:
            claimName: pvc-nfs-jellyfin-music
        - name: config
          persistentVolumeClaim:
            claimName: pvc-iscsi-jellyfin-config
        - name: cache
          persistentVolumeClaim:
            claimName: pvc-iscsi-jellyfin-cache

---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-service
  labels:
    app: jellyfin
spec:
  type: LoadBalancer
  loadBalancerIP: 10.0.100.241
  externalTrafficPolicy: Local
  selector:
    app: jellyfin
  sessionAffinity: None
  ports:
    - name: http
      protocol: TCP
      port: 8096
      targetPort: http
    - name: https
      protocol: TCP
      port: 8920
      targetPort: https
    - name: svc-discovery
      protocol: UDP
      port: 1900
      targetPort: svc-discovery
    - name: cl-discovery
      protocol: UDP
      port: 7359
      targetPort: cl-discovery

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  labels:
    gateway: private
spec:
  hostnames:
    - jellyfin.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: http
  rules:
    - backendRefs:
        - name: jellyfin-service
          port: 8096
