manifests/media-entertainment/base/jellyseer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  labels:
    app: seerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      containers:
        - name: seerr
          image: seerr-team/seerr
          podSecurityContext:
            fsGroup: 1000
            fsGroupChangePolicy: OnRootMismatch
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
          resources: {}
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pvc-iscsi-seerr-config

---
apiVersion: v1
kind: Service
metadata:
  name: seerr-service
spec:
  selector:
    app: seerr
  ports:
    - name: http
      protocol: TCP
      port: 5055
      targetPort: http
  type: ClusterIP

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  labels:
    gateway: private
    app: seerr
spec:
  hostnames:
    - jellyseerr.lan.stamx.nl
    - seerr.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: https
  rules:
    - backendRefs:
        - name: seerr-service
          port: 5055
