manifests/media-entertainment/base/lidarr.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: lidarr
  labels:
    app: lidarr
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      serviceAccountName: default
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: lidarr
          image: "lscr.io/linuxserver/lidarr:latest"
          imagePullPolicy: Always
          resources: {}
          ports:
            - name: http
              containerPort: 8686
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8686
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8686
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 8686
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: music
              mountPath: /data/music
            - name: downloads
              mountPath: /data/downloads
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: pvc-iscsi-lidarr-config
        - name: music
          persistentVolumeClaim:
            claimName: pvc-nfs-music
        - name: downloads
          persistentVolumeClaim:
            claimName: pvc-nfs-downloads

---
kind: Service
apiVersion: v1
metadata:
  name: lidarr
  labels:
    app: lidarr
spec:
  type: ClusterIP
  selector:
    app: lidarr
  ports:
    - name: http
      protocol: TCP
      port: 8686
      targetPort: http

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: lidarr
  labels:
    app: lidarr
spec:
  ingressClassName: nginx-private
  rules:
    - host: lidarr.lan.theautomation.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  name: http
  tls:
    - hosts:
        - lidarr.lan.theautomation.nl
      secretName: tls-wildcard-lan-theautomation-nl
