manifests/media-entertainment/base/transmission.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transmission
    spec:
      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 2000
      #   fsGroup: 2000
      containers:
        - name: transmission
          image: "docker.io/haugene/transmission-openvpn:latest"
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 1
            tcpSocket:
              port: 9091
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 2
            successThreshold: 2
            tcpSocket:
              port: 9091
            timeoutSeconds: 2
          securityContext:
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - NET_ADMIN
            privileged: true
          volumeMounts:
            - mountPath: /data
              name: transmission-data
            - mountPath: /config
              name: transmission-config
          resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      volumes:
        - name: transmission-data
          persistentVolumeClaim:
            claimName: pvc-nfs-downloads
        - name: transmission-config
          persistentVolumeClaim:
            claimName: pvc-iscsi-transmission-config

---
kind: Service
apiVersion: v1
metadata:
  name: transmission
  labels:
    app: transmission
spec:
  selector:
    app: transmission
  type: ClusterIP
  ports:
    - port: 9091
      protocol: TCP
      targetPort: 9091
  sessionAffinity: None

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
spec:
  ingressClassName: nginx-private
  rules:
    - host: transmission.lan.stamx.nl
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 9091
  tls:
    - hosts:
        - transmission.lan.stamx.nl
      secretName: tls-wildcard-lan-stamx-nl
